rename app file, trying to load in ios sim

--- a/www/index.html
+++ b/www/index.html
@@ -10,11 +10,11 @@
     <script src='cordova.js'></script>
     <script src='js/controllers/tipadvisor.controllers.js'></script>
     <script src='js/services/tipadvisor.services.js'></script>
-    <script src='js/tipadvisor.app.js'></script>
+    <script src='js/tipadvisor.js'></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'> -->
     <!-- <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'> -->
   </head>
-  <body ng-app='tipAdvisor'>
+  <body class='platform-ios' ng-app='tipAdvisor'>
     <ion-header-bar class='bar-stable'>
       <h1 class='title'>TipAdvisor</h1>
     </ion-header-bar>
