link to cordova_plugins.js in main index file

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link href='css/custom.min.css' rel='stylesheet'>
     <script src='lib/ionic/js/ionic.bundle.js'></script>
     <script src='cordova.js'></script>
+    <script src='cordova_plugins.js'></script>
     <script src='js/controllers/tipadvisor.controllers.js'></script>
     <script src='js/services/tipadvisor.services.js'></script>
     <script src='js/tipadvisor.js'></script>
