more tweaking of button spacing

--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,10 @@
     <!-- <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'> -->
   </head>
   <body class='platform-ios' ng-app='tipAdvisor'>
-    <ion-header-bar class='bar-stable'>
+    <ion-header-bar class='header-bar bar-stable'>
+      <button class='button button-icon icon ion-ios7-world-outline'></button>
       <h1 class='title'>TipAdvisor</h1>
+      <button class='button button-icon icon ion-ios7-gear-outline'></button>
     </ion-header-bar>
     <ion-nav-view animation='slide-left-right-ios7'></ion-nav-view>
   </body>
