--- a/www/index.html
+++ b/www/index.html
@@ -17,10 +17,10 @@
   </head>
   <body class='platform-ios' ng-app='tipAdvisor'>
     <ion-header-bar class='header-bar bar-stable'>
-      <button class='button button-icon icon ion-ios7-world-outline'></button>
-      <h1 class='title'>TipAdvisor</h1>
-      <button class='button button-icon icon ion-ios7-gear-outline'></button>
+      <button class='button button-icon icon ion-ios7-world-outline' ui-sref='guide'></button>
+      <h1 class='title' ui-sref='calc'>TipAdvisor</h1>
+      <button class='button button-icon icon ion-ios7-gear-outline' ui-sref='settings'></button>
     </ion-header-bar>
-    <ion-nav-view animation='slide-left-right-ios7'></ion-nav-view>
+    <ion-nav-view animation='fade-in'></ion-nav-view>
   </body>
 </html>
