animate ion-views with sliding

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,6 @@
       <h1 class='title' ui-sref='calc'>TipAdvisor</h1>
       <button class='button button-icon icon ion-ios7-gear-outline' ui-sref='settings'></button>
     </ion-header-bar>
-    <ion-nav-view animation='fade-in-out'></ion-nav-view>
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
