black white red on home page

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <!-- <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'> -->
   </head>
   <body class='platform-ios' ng-app='tipAdvisor'>
-    <ion-header-bar class='header-bar bar-stable'>
+    <ion-header-bar class='header-bar bar-light'>
       <button class='button button-icon icon ion-ios7-world-outline' ui-sref='guide'></button>
       <h1 class='title' ui-sref='calc'>TipAdvisor</h1>
       <button class='button button-icon icon ion-ios7-gear-outline' ui-sref='settings'></button>
