--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,8 @@
     <script src='cordova_plugins.js'></script>
     <script src='js/controllers/tipadvisor.controllers.js'></script>
     <script src='js/services/tipadvisor.services.js'></script>
+    <script src='js/controllers/tipadvisor.newcontrollers.js'></script>
+    <script src='js/services/tipadvisor.newfactories.js'></script>
     <script src='js/directives/tipadvisor.directives.js'></script>
     <script src='js/tipadvisor.js'></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'> -->
