store todos for features; install sqlite plugin and ng-cordova

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <link href='css/ionic.app.min.css' rel='stylesheet'>
     <link href='css/custom.min.css' rel='stylesheet'>
     <script src='lib/ionic/js/ionic.bundle.js'></script>
+    <script src='ng-cordova.min.js'></script>
     <script src='cordova.js'></script>
     <script src='cordova_plugins.js'></script>
     <script src='js/controllers/tipadvisor.newcontrollers.js'></script>
