--- a/www/index.html
+++ b/www/index.html
@@ -7,12 +7,13 @@
     <link href='css/ionic.app.min.css' rel='stylesheet'>
     <link href='css/custom.min.css' rel='stylesheet'>
     <script src='lib/ionic/js/ionic.bundle.js'></script>
-    <script src='ng-cordova.min.js'></script>
+    <script src='js/ng-cordova.min.js'></script>
     <script src='cordova.js'></script>
     <script src='cordova_plugins.js'></script>
     <script src='js/controllers/tipadvisor.newcontrollers.js'></script>
     <script src='js/services/tipadvisor.newfactories.js'></script>
     <script src='js/directives/tipadvisor.directives.js'></script>
+    <script src='js/providers/tipadvisor.providers.js'></script>
     <script src='js/tipadvisor.js'></script>
   </head>
   <body class='platform-ios' ng-app='tipAdvisor'>
