disable sqlite provider

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <script src='js/controllers/tipadvisor.newcontrollers.js'></script>
     <script src='js/services/tipadvisor.newfactories.js'></script>
     <script src='js/directives/tipadvisor.directives.js'></script>
-    <script src='js/providers/tipadvisor.providers.js'></script>
+    <!-- %script{ src: 'js/providers/tipadvisor.providers.js' } -->
     <script src='js/tipadvisor.js'></script>
   </head>
   <body class='platform-ios' ng-app='tipAdvisor'>
