--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <!-- %script{ src: 'js/ng-cordova.min.js' } -->
     <script src='cordova.js'></script>
     <script src='cordova_plugins.js'></script>
+    <script src='js/randomcolor.js'></script>
     <script src='js/controllers/tipadvisor.newcontrollers.js'></script>
     <script src='js/services/tipadvisor.newfactories.js'></script>
     <script src='js/directives/tipadvisor.directives.js'></script>
