fixing edge cases and display for strange percents with filter

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <script src='js/services/tipadvisor.newfactories.js'></script>
     <script src='js/directives/tipadvisor.directives.js'></script>
     <!-- %script{ src: 'js/providers/tipadvisor.providers.js' } -->
+    <script src='js/filters/tipadvisor.filters.js'></script>
     <script src='js/tipadvisor.js'></script>
   </head>
   <body class='platform-ios' ng-app='tipAdvisor'>
